Use ImmutableList as List.of only exists since Java 9
Signed-off-by: Xiaoguang Sun <sunxiaoguang@zhihu.com>